# gl_project

./: CMakeLists.txt  main.cpp
src/: gl.c
src/glad/: gl.h
